EOD issue in VAPT